Gateway/Deployments/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway

spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: marinastancu/gateway:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    job: gateway-job
    app: gateway-service
spec:
  selector:
    app: gateway
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: http
